comecei a escrever no conteudo

--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <h2>Texto Artigo 001</h2>
+            <h2>Curso de HTML5</h2>
+            <h2>Texto LOrem</h2>
         </article>
 
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso de JavaScript</h1>
         </header>
         <article>
-            <h2>Artigo 002</h2>
-            <h2>Texto Artigo 002</h2>
+            <h2>Artigo JavaScript</h2>
+            <h2>Texto JS Lorem</h2>
         </article>
-
         
     </main>
 </body>
